MediCare/app/src/main/java/com/example/medicare/change_password.java
package com.example.medicare;

import androidx.appcompat.app.AppCompatActivity;

import android.annotation.SuppressLint;
import android.content.Intent;
import android.content.SharedPreferences;
import android.os.Bundle;
import android.preference.PreferenceManager;
import android.text.TextWatcher;
import android.view.View;
import android.widget.Button;
import android.widget.EditText;
import android.widget.Toast;

import com.android.volley.DefaultRetryPolicy;
import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import com.android.volley.toolbox.Volley;

import org.json.JSONObject;

import java.util.HashMap;
import java.util.Map;

public class change_password extends AppCompatActivity implements View.OnClickListener {
    EditText old_password, new_password, confirm_password;
    Button bt_submit;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.change_password);
        old_password = (EditText) findViewById(R.id.current_pass);
        new_password = (EditText) findViewById(R.id.new_pass);
        confirm_password = (EditText) findViewById(R.id.confirm_pass);
        bt_submit = (Button) findViewById(R.id.change_pass_btn);
        bt_submit.setOnClickListener(this);
    }


    @Override
    public void onClick(View view) {

        String old_p = old_password.getText().toString();
        String new_p = new_password.getText().toString();
        String cnf_p = confirm_password.getText().toString();

        if (!old_p.isEmpty() && !new_p.isEmpty() && !cnf_p.isEmpty()) {

            if (new_p.equals(old_p)) {
                bt_submit.setEnabled(true);
            }
        }


        SharedPreferences sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
        String hu = sh.getString("ip", "");
        String url = "http://" + hu + ":5000/patient_change_password";

        RequestQueue requestQueue = Volley.newRequestQueue(getApplicationContext());
        StringRequest postRequest = new StringRequest(Request.Method.POST, url,
                new Response.Listener<String>() {
                    @Override
                    public void onResponse(String response) {
                        //  Toast.makeText(getApplicationContext(), response, Toast.LENGTH_LONG).show();

                        // response
                        try {
                            JSONObject jsonObj = new JSONObject(response);
                            if (jsonObj.getString("status").equalsIgnoreCase("ok")) {
                                Toast.makeText(getApplicationContext(), "successfully changed ", Toast.LENGTH_SHORT).show();
                                Intent i = new Intent(getApplicationContext(), login_page.class);
                                startActivity(i);

                                /// Redirect
//                                    Intent ij=new Intent(getApplicationContext(), login.class);
//                                    startActivity(ij);


                            } else {
                                Toast.makeText(getApplicationContext(), "Incorrect password", Toast.LENGTH_LONG).show();
                            }

                        } catch (Exception e) {
                            Toast.makeText(getApplicationContext(), "Error" + e.getMessage().toString(), Toast.LENGTH_SHORT).show();
                        }
                    }
                },
                new Response.ErrorListener() {
                    @Override
                    public void onErrorResponse(VolleyError error) {
                        // error
                        Toast.makeText(getApplicationContext(), "eeeee" + error.toString(), Toast.LENGTH_SHORT).show();
                    }
                }
        ) {
            @Override
            protected Map<String, String> getParams() {
                SharedPreferences sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
                Map<String, String> params = new HashMap<String, String>();


                params.put("lid", sh.getString("lid", ""));
                params.put("currentpassword", old_p);
                params.put("newpassword", new_p);


                return params;
            }
        };

        int MY_SOCKET_TIMEOUT_MS = 100000;

        postRequest.setRetryPolicy(new DefaultRetryPolicy(
                MY_SOCKET_TIMEOUT_MS,
                DefaultRetryPolicy.DEFAULT_MAX_RETRIES,
                DefaultRetryPolicy.DEFAULT_BACKOFF_MULT));
        requestQueue.add(postRequest);

    }

//    else
//
//    {
//        Toast.makeText(getApplicationContext(), "password missmatched", Toast.LENGTH_SHORT).show();
//    }

}